# october-2021-piter-python-meetup-code

./: .flake8  README.md  pyproject.toml
app/: crud.py  errors.py  log.py  settings.py  validators.py
app/api/: __init__.py  api.py  error_handlers.py  main.py
app/cli/: __init__.py  api.py  main.py
docker/: Dockerfile
tests/: test_api.py
